- Refactor: Cleanup lessons, spaces and occupations code
- Refactor: Remove unused service for execution courses creation

40.3.4 (30-01-2023)
- Improvement: Change description of 'Not Approved' enrolment state 
- Improvement: Made compatible with new access control API

40.3.3 (28-01-2023)
- Refactor: Program Conclusion - remove RegistrationStateTypeEnum slot 
- Bug fix: Corrected issue in callback URL when using CAS

40.3.2 (16-01-2023)
- Refactor: Set CET/DET school level as higher education

40.3.1 (06-01-2023)
- Refactor: Add method to check if attends is valid

40.3.0 (29-12-2022)
- Refactor: Program Conclusion - replace usage of RegistrationStateTypeEnum by RegistrationStateType

40.2.1 (29-12-2022)
- Refactor: Remove creationDateDateTime attribute from ExternalEnrolment
- Refactor: Rename creationDateDateTime attribute of external enrolment (step 2/2)
- Refactor: Remove RegistrationStateType bootstrap on system init
- Bug fix: Competence course parent units method should include course group unit aggregator


40.2.0 (20-12-2022)
- Refactor: Replace usage of RegistrationStateTypeEnum by RegistrationStateType

40.1.1 (19-12-2022)
- Refactor: Rename normalizedEctsGrade attribute of external enrolment
- Refactor: Rename creationDateDateTime attribute of external enrolment (step 1)
- Bug fix: Allow set homologation date and studies start date with null
- Bug fix: Disconnect file from PhysicalAddressValidation on delete
- Bug fix: Correcting 404 and 403 redirect to login page to contain callback url

40.1.0 (06-12-2022)
- Refactor: Create domain entity RegistrationStateType

40.0.0 (23-11-2022)
- Refactor: Replace usage of RegistrationStateType by RegistrationStateTypeEnum
- Refactor: Remove RegistrationStateType

39.2.0 (19-11-2022)
- New feature: Entity employee
- Improvement: Add number to teacher
- Improvement: Add hours to shift professorship
- Bug fix: On degree info creation, fill prevailingScientificArea from previous version

39.1.0 (26-10-2022)