@@ -290,14 +290,6 @@ public class CompetenceCourse extends CompetenceCourse_Base {
         return findInformationMostRecentUntil(executionInterval);
     }
 
-    /**
-     * @deprecated use {@link #findInformationMostRecentUntil(ExecutionInterval)}
-     */
-    @Deprecated
-    public CompetenceCourseInformation findCompetenceCourseInformationForExecutionYear(final ExecutionYear executionYear) {
-        return findInformationMostRecentUntil(executionYear);
-    }
-
     public String getName(final ExecutionInterval interval) {
         final CompetenceCourseInformation information = findInformationMostRecentUntil(interval);
         return information != null ? information.getName() : null;
@@ -678,12 +670,12 @@ public class CompetenceCourse extends CompetenceCourse_Base {
 
     public Stream<Unit> getParentUnits(final Predicate<Unit> predicate, ExecutionInterval interval) {
         final Predicate<Unit> nullSafePredicate = predicate != null ? predicate : u -> true;
-        
+
         final CompetenceCourseInformation information = findInformationMostRecentUntil(interval);
         if (information == null) {
             return Stream.empty();
         }
-        
+
         final Unit courseGroupUnit = information.getCompetenceCourseGroupUnit();
         return Stream.concat(Stream.of(courseGroupUnit), courseGroupUnit.getAllParentUnits().stream()).filter(nullSafePredicate);
     }
