@@ -1,5 +1,6 @@
 - Refactor: Cleanup lessons, spaces and occupations code
 - Refactor: Remove unused service for execution courses creation
+- Refactor: Remove deprecated method to find competence course information
 
 40.3.4 (30-01-2023)
 - Improvement: Change description of 'Not Approved' enrolment state 
